--- a/openldap/templates/secret-ltb.yaml
+++ b/openldap/templates/secret-ltb.yaml
@@ -1,8 +1,8 @@
-{{ if not .Values.global.existingSecret }}
+{{ if not .Values.existingSecret }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Release.Name }}-ltb-passwd
+  name: {{ template "openldap.fullname" . }}-ltb-passwd
   labels:
     app: {{ template "openldap.name" . }}
     chart: {{ template "openldap.chart" . }}
@@ -13,5 +13,5 @@ metadata:
 {{- end }}
 type: Opaque
 data:
-  LDAP_ADMIN_PASSWORD: {{ .Values.global.adminPassword | b64enc | quote }}
+  LDAP_ADMIN_PASSWORD: {{ .Values.adminPassword | b64enc | quote }}
 {{ end }}
