--- a/openldap/Chart.yaml
+++ b/openldap/Chart.yaml
@@ -1,30 +1,24 @@
 apiVersion: v2
-name: openldap-stack-ha
+appVersion: 2.4.47
 dependencies:
-  - name: ltb-passwd
-    version: 0.1.x
-    condition: ltb-passwd.enabled
-  - name: phpldapadmin
-    version: 0.1.x
-    condition: phpldapadmin.enabled
-  - name: common
-    repository: https://charts.bitnami.com/bitnami
-    tags:
-      - bitnami-common
-    version: 1.x.x
-home: https://www.openldap.org
-version: 4.1.1
-appVersion: 2.6.3
+- condition: ltb-passwd.enabled
+  name: ltb-passwd
+  repository: ""
+  version: 0.1.x
+- condition: phpldapadmin.enabled
+  name: phpldapadmin
+  repository: ""
+  version: 0.1.x
 description: Community developed LDAP software
-icon: https://raw.githubusercontent.com/jp-gouin/helm-openldap/master/logo.png
+home: https://www.openldap.org
+icon: http://www.openldap.org/images/headers/LDAPworm.gif
 keywords:
-  - ldap
-  - openldap
-  - iam-stack
-  - high availability
-sources:
-  - https://github.com/jp-gouin/helm-openldap
+- ldap
+- openldap
 maintainers:
-  - name: Jean-Philippe Gouin
-    email: jp-gouin@hotmail.fr
-engine: gotpl
+- email: jp-gouin@hotmail.fr
+  name: Jean-Philippe Gouin
+name: openldap
+sources:
+- https://github.com/kubernetes/charts
+version: 2.0.4
