--- a/openldap/charts/ltb-passwd/templates/ingress.yaml
+++ b/openldap/charts/ltb-passwd/templates/ingress.yaml
@@ -1,8 +1,7 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "ltb-passwd.fullname" . -}}
 {{- $ingressPath := .Values.ingress.path -}}
-{{- $ingressPathType := .Values.ingress.pathType -}}
-apiVersion: {{ include "common.capabilities.ingress.apiVersion" . }}
+apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
@@ -16,9 +15,6 @@ metadata:
 {{ toYaml . | indent 4 }}
 {{- end }}
 spec:
-{{- if and .Values.ingress.ingressClassName (eq "true" (include "common.ingress.supportsIngressClassname" .)) }}
-  ingressClassName: {{ .Values.ingress.ingressClassName | quote }}
-{{- end }}
 {{- if .Values.ingress.tls }}
   tls:
   {{- range .Values.ingress.tls }}
@@ -35,21 +31,8 @@ spec:
       http:
         paths:
           - path: {{ $ingressPath }}
-            {{- if eq "true" (include "common.ingress.supportsPathType" $) }}
-            pathType: {{ $ingressPathType }}
-            {{- end }}
-            backend: {{- include "common.ingress.backend" (dict "serviceName" $fullName "servicePort" "http" "context" $)  | nindent 14 }}
-            {{- /*
- backend:
-              {{- if eq (include "ingress.apiVersion" $) "networking.k8s.io/v1" }}
-              service:
-                name: {{ $fullName }}
-                port:
-                  name: http
-              {{- else }}
+            backend:
               serviceName: {{ $fullName }}
               servicePort: http
-              {{- end }} 
-*/ -}}
   {{- end }}
 {{- end }}
