--- a/openldap/charts/ltb-passwd/values.yaml
+++ b/openldap/charts/ltb-passwd/values.yaml
@@ -6,24 +6,24 @@ replicaCount: 1
 
 image:
   repository: tiredofit/self-service-password
-  tag: 5.3.1
+  tag: latest
   pullPolicy: Always
-  pullSecrets: []
 
-
+imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
 service:
   type: ClusterIP
   port: 80
-
+ingress:
+  enabled: true
+  annotations: {}
+  host: "ssl-ldap.local"
 ## Configure Ingress based on the documentation here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
   enabled: false
   annotations: {}
-  ## See https://kubernetes.io/docs/concepts/services-networking/ingress/#ingressclass-scope
-  # ingressClassName: nginx
   path: /
   ## Ingress Host
   # hosts:
@@ -34,41 +34,18 @@ ingress:
   # - secretName: ssl-ldap-dedicated-tls
   #   hosts:
   #   - ssl-ldap.local
-
-# -- Init containers to add to the pod
-## Note: Supports use of custom Helm templates
-initContainers: []
-
-# -- Additional volumeMounts to the application main container
-volumeMounts: []
-#  - mountPath: /usr/local/bin/my_tool
-#    name: xxxxxx
-#    subPath: foo
-
-# -- Additional volumes to the application pod
-volumes: []
-#  - name: xxxxx
-#    emptyDir: {}
 resources: {}
 nodeSelector: {}
 tolerations: []
 affinity: {}
 ldap:
-  custom:
-    - name: TLS_REQCERT
-      value: never
-  # if you want to restrict search base tree for users instead of complete domain
-  # searchBase: "ou=....,dc=mydomain,dc=com"
-  # if you want to use a dedicated bindDN for the search with less permissions instead of cn=admin one
-  # bindDN: "cn=....,dc=mydomain,dc=com"
-  # if you want to use a specific key of the credentials secret instead of the default one (LDAP_ADMIN_PASSWORD)
-  # passKey: LDAP_MY_KEY
+  server: ldap://openldap.openldap
+  searchBase: dc=example,dc=org
+  # existingSecret: ssp-ldap
+  bindDN: cn=admin,dc=example,dc=org
+  bindPWKey: BINDPW
 env:
-- name: SECRETKEY
+- name: SECRETEKEY
   value: "password"
 - name: LDAP_LOGIN_ATTRIBUTE
   value: "cn"
-- name: LDAP_STARTTLS
-  value: "false"
-- name: CHANGE_SSHKEY
-  value: "true"
