--- a/openldap/charts/phpldapadmin/Chart.yaml
+++ b/openldap/charts/phpldapadmin/Chart.yaml
@@ -1,14 +1,13 @@
-name: phpldapadmin
-version: 0.1.2
+apiVersion: v1
 appVersion: 0.7.1
 description: Web-based LDAP browser to manage your LDAP server
-keywords:
-  - phpldapadmin
-  - openldap
-  - userrights
 home: http://phpldapadmin.sourceforge.net
 icon: http://phpldapadmin.sourceforge.net/wiki/images/d/d4/Logo.jpg
-source:
-- https://gitlab.v2.rancher.geohub.space/g3s/i3s/i3s-helm-catalog
+keywords:
+- phpldapadmin
+- openldap
+- userrights
 maintainers:
 - name: Jean-Philippe Gouin
+name: phpldapadmin
+version: 0.1.2
