--- a/openldap/templates/configmap-env.yaml
+++ b/openldap/templates/configmap-env.yaml
@@ -1,7 +1,7 @@
 #
 # A ConfigMap spec for openldap slapd that map directly to env variables in the Pod.
 # List of environment variables supported is from the docker image:
-# https://hub.docker.com/r/bitnami/openldap/
+# https://github.com/osixia/docker-openldap#beginner-guide
 # Note that passwords are defined as secrets
 #
 apiVersion: v1
@@ -17,24 +17,10 @@ metadata:
 {{ toYaml .Values.extraLabels | indent 4 }}
 {{- end }}
 data:
-  LDAP_ROOT: {{ include "global.baseDomain" . }}
-  LDAP_EXTRA_SCHEMAS: {{ print "cosine,inetorgperson,nis," (include "openldap.schemaFiles" .) }}
-  {{- if .Values.users }}
-  LDAP_USERS: {{ .Values.users }}
-  {{- end }}
-  {{- if .Values.userPasswords }}
-  LDAP_PASSWORDS: {{ .Values.userPasswords }}
-  {{- end }}
-  {{- if .Values.group }}
-  LDAP_GROUP: {{ .Values.group }}
-  {{- end }}
-  LDAP_TLS_CERT_FILE: /opt/bitnami/openldap/certs/tls.crt
-  LDAP_TLS_KEY_FILE: /opt/bitnami/openldap/certs/tls.key
-  LDAP_TLS_CA_FILE: /opt/bitnami/openldap/certs/ca.crt
-  {{- if .Values.global.configUserEnabled }}
-  LDAP_CONFIG_ADMIN_ENABLED: "yes"
-  LDAP_CONFIG_ADMIN_USERNAME: "{{ .Values.global.configUser }}"
-  {{- else }}
-  LDAP_CONFIG_ADMIN_ENABLED: "no"
-  {{- end }}
 {{ toYaml .Values.env | indent 2 }}
+{{- if .Values.replication.enabled }}
+  LDAP_REPLICATION: "true"
+  LDAP_REPLICATION_CONFIG_SYNCPROV: "binddn=\"cn=admin,cn=config\" bindmethod=simple credentials=$LDAP_CONFIG_PASSWORD searchbase=\"cn=config\" type=refreshAndPersist retry=\"{{.Values.replication.retry }} +\" timeout={{.Values.replication.timeout }} starttls={{.Values.replication.starttls }} tls_reqcert={{.Values.replication.tls_reqcert }}"
+  LDAP_REPLICATION_DB_SYNCPROV: "binddn=\"cn=admin,$LDAP_BASE_DN\" bindmethod=simple credentials=$LDAP_ADMIN_PASSWORD searchbase=\"$LDAP_BASE_DN\" type=refreshAndPersist interval={{.Values.replication.interval }} retry=\"{{.Values.replication.retry }} +\" timeout={{.Values.replication.timeout }} starttls={{.Values.replication.starttls }} tls_reqcert={{.Values.replication.tls_reqcert }}"
+  LDAP_REPLICATION_HOSTS: "#PYTHON2BASH:[{{ template "replicalist" . }}]"
+{{- end }}
