--- a/openldap/templates/secret.yaml
+++ b/openldap/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{ if not .Values.global.existingSecret }}
+{{ if not .Values.existingSecret }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -13,9 +13,6 @@ metadata:
 {{- end }}
 type: Opaque
 data:
-  LDAP_ADMIN_USERNAME: {{ .Values.global.adminUser | b64enc | quote }}
-  LDAP_ADMIN_PASSWORD: {{ .Values.global.adminPassword | b64enc | quote }}
-  {{- if .Values.global.configUserEnabled }}
-  LDAP_CONFIG_ADMIN_PASSWORD: {{ .Values.global.configPassword  | b64enc | quote }}
-  {{- end}}
+  LDAP_ADMIN_PASSWORD: {{ .Values.adminPassword | b64enc | quote }}
+  LDAP_CONFIG_PASSWORD: {{ .Values.configPassword  | b64enc | quote }}
 {{ end }}
