--- a/openproject/templates/ingress.yaml
+++ b/openproject/templates/ingress.yaml
@@ -11,8 +11,8 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  {{- with .Values.ingress.ingressClassName }}
-  ingressClassName: {{ .Values.ingress.ingressClassName }}
+  {{- with .Values.ingress }}
+  ingressClassName: {{ .ingressClassName }}
   {{- end }}
   {{- if .Values.ingress.tls.enabled }}
   tls:
