--- a/openproject/templates/ingress.yaml
+++ b/openproject/templates/ingress.yaml
@@ -11,9 +11,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  {{- with .Values.ingress }}
-  ingressClassName: {{ .ingressClassName }}
-  {{- end }}
+  ingressClassName: {{ .Values.ingress.ingressClassName }}
   {{- if .Values.ingress.tls.enabled }}
   tls:
     - hosts:
