--- a/charts/traefik/Chart.yaml
+++ b/charts/traefik/Chart.yaml
@@ -1,19 +1,21 @@
 annotations:
   artifacthub.io/changes: |
-    - "fix(observability): allow `tracing.sampleRate` to be set to zero"
-    - "fix(entryPoint): allow scheme to be unset on redirect"
-    - "fix(Deployment): revision history should be disableable"
-    - "feat(podtemplate): add support for localPlugins"
-    - "feat(podtemplate): add capacity to set GOMEMLIMIT with default at 90% of user-set memory limit"
-    - "feat(hub): offline mode"
-    - "feat(gateway-api)!: support selector for namespace policy"
-    - "feat(deps): update traefik docker tag to v3.5.0"
-    - "feat(CRDs): update for Traefik Proxy v3.5 and Gateway API v1.3.0"
-    - "feat(CRDs): update Traefik Hub to v1.21.0"
-    - "docs(plugins): improve wording and sync with `VALUES.md`"
-    - "chore(release): :rocket: publish 37.0.0 and 1.10.0"
+    - "refactor: remove `$root` hacks in favor of using `$`"
+    - "refactor: only render `--global.checkNewVersion` when it differs from default"
+    - "fix: prevent blank lines in args"
+    - "fix(deployment): allow to disable checkNewVersion via values.yaml"
+    - "feat: support custom monitoring api"
+    - "feat: support Traefik v3.5 features"
+    - "feat(hub): add annotations for webhook admission"
+    - "feat(hooks): use now stable prestop command syntax"
+    - "feat(deps): update traefik docker tag to v3.5.1"
+    - "feat(deployment): add chart value timezone that auomatically configures access logs timezone"
+    - "feat(CRDs): update Traefik Hub to v1.21.1"
+    - "feat(CRDs): add gatewayAPI experimental channel option"
+    - "docs(plugins): Sync VALUES.md"
+    - "chore(release): :rocket: Publish 37.1.0 and 1.11.0"
 apiVersion: v2
-appVersion: v3.5.0
+appVersion: v3.5.1
 description: A Traefik based Kubernetes ingress controller
 home: https://traefik.io/
 icon: https://raw.githubusercontent.com/traefik/traefik/master/docs/content/assets/img/traefik.logo.png
@@ -33,4 +35,4 @@ sources:
 - https://github.com/traefik/traefik-helm-chart
 - https://github.com/traefik/traefik
 type: application
-version: 37.0.0
+version: 37.1.0
