--- a/charts/velero/templates/servicemonitor.yaml
+++ b/charts/velero/templates/servicemonitor.yaml
@@ -28,19 +28,22 @@ spec:
       app.kubernetes.io/instance: {{ .Release.Name }}
   endpoints:
   - port: http-monitoring
-    interval: {{ .Values.metrics.scrapeInterval }}
-    scrapeTimeout: {{ .Values.metrics.scrapeTimeout }}
-    {{- if .Values.metrics.serviceMonitor.scheme }}
-    scheme: {{ .Values.metrics.serviceMonitor.scheme }}
+    {{- with .Values.metrics.scrapeInterval }}
+    interval: {{ . }}
     {{- end }}
-    {{- if .Values.metrics.serviceMonitor.metricRelabelings }}
-    metricRelabelings: {{- toYaml .Values.metrics.serviceMonitor.metricRelabelings | nindent 6 }}
+    {{- with .Values.metrics.scrapeTimeout }}
+    scrapeTimeout: {{ . }}
     {{- end }}
-    {{- if .Values.metrics.serviceMonitor.relabelings }}
-    relabelings: {{ toYaml .Values.metrics.serviceMonitor.relabelings | nindent 6 }}
+    {{- with .Values.metrics.serviceMonitor.scheme }}
+    scheme: {{ . }}
     {{- end }}
-    {{- if .Values.metrics.serviceMonitor.tlsConfig }}
-    tlsConfig:
-      {{- toYaml .Values.metrics.serviceMonitor.tlsConfig | nindent 6 }}
+    {{- with .Values.metrics.serviceMonitor.metricRelabelings }}
+    metricRelabelings: {{ toYaml . | nindent 6 }}
+    {{- end }}
+    {{- with .Values.metrics.serviceMonitor.relabelings }}
+    relabelings: {{ toYaml . | nindent 6 }}
+    {{- end }}
+    {{- with .Values.metrics.serviceMonitor.tlsConfig }}
+    tlsConfig: {{ toYaml . | nindent 6 }}
     {{- end }}
 {{- end }}
