--- a/charts/opentelemetry-demo/Chart.yaml
+++ b/charts/opentelemetry-demo/Chart.yaml
@@ -16,7 +16,7 @@ dependencies:
 - condition: grafana.enabled
   name: grafana
   repository: https://grafana.github.io/helm-charts
-  version: 10.0.0
+  version: 10.1.2
 - condition: opensearch.enabled
   name: opensearch
   repository: https://opensearch-project.github.io/helm-charts/
@@ -27,10 +27,11 @@ icon: https://opentelemetry.io/img/logos/opentelemetry-logo-nav.png
 maintainers:
 - name: dmitryax
 - name: jaronoff97
+- name: julianocosta89
 - name: puckpuck
 - name: tylerhelmuth
 name: opentelemetry-demo
 sources:
 - https://github.com/open-telemetry/opentelemetry-demo
 type: application
-version: 0.38.1
+version: 0.38.4
