--- a/charts/urban-mosquitto/templates/service.yaml
+++ b/charts/urban-mosquitto/templates/service.yaml
@@ -17,6 +17,9 @@ spec:
 {{- if .Values.service.loadBalancerIP }}
   loadBalancerIP: {{ .Values.service.loadBalancerIP }}
 {{- end }}
+{{- if .Values.service.externalTrafficPolicy }}
+  externalTrafficPolicy: {{ .Values.service.externalTrafficPolicy }}
+{{- end }}
 {{- with .Values.ports }}
   ports:
   {{- range $key, $value := . }}
