kube-prometheus-stack tag update

--- a/charts/openbao/Chart.yaml
+++ b/charts/openbao/Chart.yaml
@@ -1,11 +1,8 @@
 annotations:
   artifacthub.io/changes: |
-    - kind: changed
+    - kind: fixed
       description: |
-        chore: update OpenBao to 2.4.3
-      links:
-        - name: OpenBao 2.4.3 Release
-          url: https://github.com/openbao/openbao/releases/tag/v2.4.3
+        fix: grafana dashboard datasource
   artifacthub.io/containsSecurityUpdates: "true"
   charts.openshift.io/name: Openbao
 apiVersion: v2
@@ -30,4 +27,4 @@ maintainers:
 name: openbao
 sources:
 - https://github.com/openbao/openbao-helm
-version: 0.19.1
+version: 0.19.2
