--- a/charts/openbao/Chart.yaml
+++ b/charts/openbao/Chart.yaml
@@ -1,12 +1,15 @@
 annotations:
   artifacthub.io/changes: |
-    - kind: fixed
+    - kind: changed
       description: |
-        fix: grafana dashboard datasource
+        chore: update OpenBao to 2.4.4
+      links:
+        - name: OpenBao 2.4.4 Release
+          url: https://github.com/openbao/openbao/releases/tag/v2.4.4
   artifacthub.io/containsSecurityUpdates: "true"
   charts.openshift.io/name: Openbao
 apiVersion: v2
-appVersion: v2.4.3
+appVersion: v2.4.4
 description: Official OpenBao Chart
 home: https://github.com/openbao/openbao-helm
 icon: https://github.com/openbao/artwork/blob/main/color/openbao-color.svg
@@ -27,4 +30,4 @@ maintainers:
 name: openbao
 sources:
 - https://github.com/openbao/openbao-helm
-version: 0.19.2
+version: 0.19.3
