--- a/charts/openproject/templates/servicemonitor.yaml
+++ b/charts/openproject/templates/servicemonitor.yaml
@@ -6,12 +6,15 @@ metadata:
   name: {{ include "common.names.fullname" . }}-metrics
   {{- if .Values.metrics.serviceMonitor.namespace }}
   namespace: {{ .Values.metrics.serviceMonitor.namespace | quote }}
+  {{- else }}
+  namespace: {{ include "common.names.namespace" . | quote }}
   {{- end }}
   labels:
     {{- include "common.labels.standard" . | nindent 4 }}
     {{- with .Values.metrics.serviceMonitor.labels }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
+    app.kubernetes.io/component: openproject
   {{- with .Values.metrics.serviceMonitor.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
