--- a/charts/openproject/templates/tests/test-connection.yaml
+++ b/charts/openproject/templates/tests/test-connection.yaml
@@ -3,14 +3,17 @@ apiVersion: "v1"
 kind: "Pod"
 metadata:
   name: "{{ include "common.names.fullname" . }}-test-connection"
-  labels:
-    {{- include "common.labels.standard" . | nindent 4 }}
+  namespace: {{ include "common.names.namespace" . | quote }}
+  labels: {{- include "common.labels.standard" ( dict "customLabels" .Values.commonLabels "context" $ ) | nindent 4 }}
+    app.kubernetes.io/component: test-connection
   annotations:
     "helm.sh/hook": test
 spec:
+  serviceAccountName: {{ include "common.names.fullname" . }}
   containers:
     - name: "wget"
       image: "busybox"
+      imagePullPolicy: Always
       command: ['wget']
       args:
         - '--no-verbose'
