--- a/charts/openproject/templates/persistentvolumeclaim.yaml
+++ b/charts/openproject/templates/persistentvolumeclaim.yaml
@@ -5,7 +5,9 @@ apiVersion: "v1"
 kind: "PersistentVolumeClaim"
 metadata:
   name: {{ include "common.names.fullname" . }}
+  namespace: {{ include "common.names.namespace" . | quote }}
   labels: {{- include "common.labels.standard" ( dict "customLabels" .Values.commonLabels "context" $ ) | nindent 4 }}
+    app.kubernetes.io/component: openproject
   {{- if or .Values.persistence.annotations .Values.commonAnnotations }}
   {{- $annotations := include "common.tplvalues.merge" ( dict "values" ( list .Values.persistence.annotations .Values.commonAnnotations ) "context" . ) }}
   annotations: {{- include "common.tplvalues.render" ( dict "value" $annotations "context" $) | nindent 4 }}
