--- a/charts/openproject/templates/secret_oidc.yaml
+++ b/charts/openproject/templates/secret_oidc.yaml
@@ -4,7 +4,9 @@ apiVersion: "v1"
 kind: "Secret"
 metadata:
   name: "{{ include "common.names.fullname" . }}-oidc"
+  namespace: {{ include "common.names.namespace" . | quote }}
   labels: {{- include "common.labels.standard" ( dict "customLabels" .Values.commonLabels "context" $ ) | nindent 4 }}
+    app.kubernetes.io/component: oidc
   {{- if .Values.commonAnnotations }}
   annotations: {{- include "common.tplvalues.render" ( dict "value" .Values.commonAnnotations "context" $ ) | nindent 4 }}
   {{- end }}
