--- a/charts/openproject/values.yaml
+++ b/charts/openproject/values.yaml
@@ -20,6 +20,8 @@ global:
   ##   - myRegistryKeySecretName
   #
   imagePullSecrets: []
+## Name to override the release namespace with
+namespaceOverride: ""
 ## Add labels to all the deployed resources
 commonLabels: {}
 ## Add annotations to all the deployed resources
@@ -403,6 +405,10 @@ hocuspocus:
     tls:
       enabled: true
       secretName: ""
+
+  auth:
+    existingSecret:
+    secretKey: secret
 
   image:
     registry: "docker.io"
