--- a/charts/resourcespace/Chart.yaml
+++ b/charts/resourcespace/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: 0.1.2
-description: A Helm chart for resourcespace_docker
-name: resourcespace_docker
-version: 0.1.2
+appVersion: 0.1.4
+description: A Helm chart for resourcespace
+name: resourcespace
+version: 0.1.4
